# cpp_exercises

bonn_course/class/: classes  classes.cpp
bonn_course/exercises/: CMakeLists.txt
bonn_course/exercises/src/: CMakeLists.txt  blah.cpp  hello.cpp  hello.h  main.cpp
bonn_course/exercises/tests/: CMakeLists.txt  test_blah.cpp
bonn_course/hw1/: exercise_a.cpp  hw1.cpp
